--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,10 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "axios": "^1.12.2",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13",
-    "vue-router": "^4.6.3"
+    "vue": "^2.6.14",
+    "vue-router": "^3.6.5",
+    "vuetify": "^2.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -20,7 +22,10 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "sass": "^1.93.2",
+    "sass-loader": "^10.5.2",
+    "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
     "root": true,
